# AIUC_2_OWASP_Agentic_Top_10

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: agent-security.md  ai-security.md
.devcontainer/: devcontainer.json
.gsd/: PROJECT.md
.zerg/: config.json
aiuc/: __init__.py  mapper.py  models.py  output.py  signals.py  taxonomy.py
mapping/: AIUC-1_-_OWASP_Top10_for_Agentic_Applications_-_Crosswalk-RC_.md  AIUC1_OWASP_Top10_for_Agentic_Applications_Crosswalks.md  AIUC1_OWASP_Top10_for_Agentic_Applications_Crosswalks_v2.md  aiuc1-owasp-top10-agentic-final-mapping.md  aiuc_owasp_mapping.json  aiuc_owasp_mapping.xlsx  rock_john_diffs.md
scripts/: build_aiuc_json.py  build_v2_from_markdown.py  evaluate_pipeline.py  run_mapping.py  run_scraper.py
tests/: test_classification.py  test_data.json  test_readme_sheet.py
