[project]
name = "aiuc-owasp-agentic-top10"
version = "0.1.0"
description = "OWASP Top 10 for Agentic Applications - Analysis and Implementation"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
